[package]
name = "minitrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper = "0.13.1"
anyhow = { version = "1.0.72", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
crate-type = ["cdylib"]
